# free-codex

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/free_codex/: all_commands.json  app.py  cli.py  cli_codex.py  cli_server.py  logging_asyncio_filter.py  models.py
src/free_codex/config/: config.toml.example  env.example
src/free_codex/routes/: admin.py  admin_common.py  admin_nim.py  chat.py  embeddings.py  models.py  responses.py
src/free_codex/services/: admin_env.py  admin_nim_probe.py  circuit_breaker.py  nim_chat_payload.py  nim_service.py  response_cache.py  responses_bridge.py  responses_buffered_sse.py  responses_input_expand.py  responses_messages.py  responses_output_items.py  responses_sse_chunks.py  responses_sse_codec.py  responses_stream.py  responses_tool_io.py  sse_utils.py  stream_disconnect.py  workspace_enhanced.py  workspace_inject.py  workspace_resolve.py  workspace_scan.py
src/free_codex/static/: health.js  index.html  styles.css
src/free_codex/static/admin/: app.js  index.html  styles.css
src/free_codex/utils/: codex_config_patch.py  config.py  free_codex_paths.py  init_logic.py
tests/: conftest.py  test_admin_env.py  test_admin_http.py  test_admin_nim_probe.py  test_admin_nim_routes.py  test_cli.py  test_codex_config_patch.py  test_free_codex_paths.py  test_nim_chat_payload.py  test_nim_service.py  test_proxy.py  test_responses_input_expand.py  test_responses_messages.py  test_responses_sse_chunks.py  test_workspace_scan.py
testsprite_tests/tmp/: code_summary.yaml  config.json
