[project]
name = "free-codex"
version = "0.3.1"
description = "Advanced OpenAI compatible proxy for NVIDIA NIM"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Free Codex Developer" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "python-dotenv",
    "pydantic",
]

[project.scripts]
fc-init = "free_codex.cli:fc_init"
fc-server = "free_codex.cli:run_server"
fc-codex = "free_codex.cli:run_codex"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/free_codex"]

[tool.hatch.build.targets.wheel.sources]
"src/free_codex" = "free_codex"

[tool.hatch.build.targets.wheel.force-include]
"src/free_codex/static" = "free_codex/static"

[dependency-groups]
dev = [
    "pytest",
    "httpx",
]
